A lot of changes
Fix block registration
Fix autocraft
Fix packet
Fix problems with proxy
Removed power provider eu,mj
Removed Datafixer
Fix item render